# MillerLib

./: CMakeLists.txt  README.md  main.c
.github/workflows/: cmake-multi-platform.yml
include/: MillerLib.h  MillerTypeDef.h
include/ProgramConnectors/: SharedMemory.h
include/Structures/: Array.h
include/Threading/: MillerThreads.h
src/: MillerLib.c
src/ProgramConnectors/: SharedMemory.c
src/Structures/: Array.c
src/Threading/: MillerThreads.c
